# SCLEII_TwoLIbAddMinusSeprt

./: CMakeLists.txt
MyMath/: CMakeLists.txt  mymath.cc
SCLEII_TwoLIbAddMinusSeprt_19.33.31630.0_install/lib/: minusd.lib
SCLEII_TwoLIbAddMinusSeprt_19.33.31630.0_install/lib/cmake/minus/: minusConfig.cmake  minusTargets-debug.cmake  minusTargets.cmake
app/: CMakeLists.txt
extern_app/: CMakeLists.txt  mymathApp.cc
minus/: CMakeLists.txt  minusConfig.cmake.in  minus_opera.cc
minus/include/: minus_opera.h
src/: CMakeLists.txt  README.md
